@@ -3,4 +3,6 @@
 
 === 0.1 ===
 
+- added models and cms plugin
+
 Initial commit
